--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "parse-diff": "^0.4.2",
-    "probot": "^6.0.0"
+    "probot": "^6.0.0",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
     "jest": "^22.4.3",
